velero-gitops-monitoring-project/app/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: demo-app
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: demo-app
    ports:
    - protocol: TCP
      port: 80
  policyTypes:
  - Ingress
